--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "coinmarketcap-s2l",
-	"version": "1.1.0",
+	"version": "1.1.1",
 	"type": "module",
 	"description": "Symbol to CoinMarketCap Link converter",
 	"author": "Valentin Degenne",
@@ -13,22 +13,23 @@
 	"imports": {
 		".": {
 			"import": "./index.js",
-			"types": "./lib/main.d.ts"
+			"types": "./lib/index.d.ts"
 		}
 	},
 	"files": [
-		"./lib/main.d.ts",
+		"./lib",
 		"./index.js"
 	],
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^26.0.1",
+		"@rollup/plugin-commonjs": "^28.0.1",
 		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-terser": "^0.4.4",
-		"@rollup/plugin-typescript": "^11.1.6",
+		"@rollup/plugin-typescript": "^12.1.1",
 		"node-fetch": "^3.3.2",
-		"rollup": "^4.20.0",
-		"typescript": "^5.5.4",
-		"wireit": "^0.14.7"
+		"rollup": "^4.27.3",
+		"tslib": "^2.8.1",
+		"typescript": "^5.6.3",
+		"wireit": "^0.14.9"
 	},
 	"scripts": {
 		"build": "wireit"
