--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
-		"target": "ES2022",
-		"module": "Node16",
-		"moduleResolution": "Node16",
+		"target": "ESNext",
+		"module": "NodeNext",
+		"moduleResolution": "nodenext",
 		"strict": false,
 		"useDefineForClassFields": false,
 		"experimentalDecorators": true,
@@ -11,8 +11,8 @@
 		"declaration": true,
 		"declarationMap": true,
 		"sourceMap": true,
-		"types": [],
+		"types": []
 	},
 	"include": ["./src/**/*.ts"],
-	"exclude": [],
+	"exclude": ["./node_modules/"]
 }
